@@ -11,7 +11,7 @@
  <property name="product">PloneMeeting</property>
  <property name="factory">addMeeting</property>
  <property name="immediate_view">meeting_view</property>
- <property name="global_allow">True</property>
+ <property name="global_allow">False</property>
  <property name="filter_content_types">False</property>
  <property name="allowed_content_types">
  </property>
