@@ -11,7 +11,7 @@
  <property name="product">PloneMeeting</property>
  <property name="factory">addMeetingItem</property>
  <property name="immediate_view">meetingitem_view</property>
- <property name="global_allow">True</property>
+ <property name="global_allow">False</property>
  <property name="filter_content_types">True</property>
  <property name="allowed_content_types">
    <element value="MeetingFile"/>
