@@ -73,6 +73,8 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
   it and be sure it is called after the PloneMeeting AdviceAdded and AdviceModified events
 - Added new portal_types for recurring items (MeetingItemRecurring) and item templates (MeetingItemTemplate),
   this way we may remove the monkey patch about CatalogTool.searchResults and the 'isDefinedInTool' catalog index
+- Mark base portal_types Meeting, MeetingItem, MeetingItemTemplate and MeetingItemRecurring global_allow=False
+- Make sure item templates and recurring items are not searchable using the live search
 
 3.3 (2015-02-27)
 ----------------
